--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,32 +6,27 @@ plugins {
 }
 
 android {
-    namespace 'com.example.new_flutterbill_fixed'
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdkVersion 34
+    namespace "com.example.flutterbill"
+
+    defaultConfig {
+        applicationId "com.example.flutterbill"
+        minSdkVersion 23
+        targetSdkVersion 34
+        versionCode 1
+        versionName "1.0"
+    }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
         jvmTarget = "17"
     }
 
-    defaultConfig {
-        applicationId = "com.example.new_flutterbill_fixed"
-        minSdkVersion 23
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
-    }
-
-    buildTypes {
-        release {
-            signingConfig = signingConfigs.debug
-        }
-    }
+    // other configurations...
 }
 
 
