--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   android_intent_plus: ^2.0.2
   flutter_background_service: ^5.0.10
   just_audio: ^0.9.28
+  workmanager: ^0.4.1
+  flutter_local_notifications: ^9.9.1
 
 
 
