phase 1 final app
phase 1 final
1. order det with ui
2. order with ui

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <!-- Application-level configurations -->
     <application
-        android:label="new_flutterbill_fixed"
+        android:label="RecieptPrinter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
