--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.3
+  flutter_launcher_icons: ^0.9.2
 
 flutter:
   uses-material-design: true
   assets:
       - assets/sounds/beep.mp3
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"  # Path to your app icon image
